--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "test:ImageLoader": "vue serve ./src/components/ImageLoader/test.vue",
     "test:Contact": "vue serve ./src/components/Contact/test.vue",
     "test:Menu": "vue serve ./src/components/Menu/test.vue",
-    "test:SiteAside": "vue serve ./src/components/SiteAside/test.vue"
+    "test:SiteAside": "vue serve ./src/components/SiteAside/test.vue",
+    "test:Layout": "vue serve ./src/components/Layout/test.vue"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
-    "vue": "^2.6.11"
+    "router": "^1.3.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
